Fixed maven publish

--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,13 @@ artifacts {
     archives sourcesJar
 }
 
+configurations {
+    [apiElements, runtimeElements].each {
+        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
+        it.outgoing.artifact(bundle)
+    }
+}
+
 scmVersion {
     tag {
         prefix = 'ical4j'
