--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
             "org.codehaus.groovy:groovy-xml:$groovyVersion"
 
     // junit
-    testImplementation "junit:junit:$junitVersion"
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.1'
 
     // groovy-test
     testImplementation "org.codehaus.groovy:groovy-test:$groovyVersion"
@@ -69,6 +69,10 @@ dependencies {
     // spock
     testImplementation platform("org.spockframework:spock-bom:2.0-M4-groovy-3.0"),
             "org.spockframework:spock-core"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 jacocoTestReport {
