Added maven snapshot credentials

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,3 +16,5 @@ jobs:
       env:
         GPR_USERNAME: benfortuna
         GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
