Fixed security risk with codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 script:
   - ./gradlew build jacocoTestReport
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash $HOME/etc/codecov.sh
 deploy:
   provider: script
   script: ./gradlew -q -Prelease.customUsername=$GIT_USER -Prelease.customPassword=$GIT_PASSWORD -Prelease.disableChecks -Prelease.pushTagsOnly release && ./gradlew build bintrayUpload
