Use chronology to define allowable range of recurrence values

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     // optional timezone caching..
     implementation 'javax.cache:cache-api:1.1.1', optional
 
+    // optional support for non-Gregorian chronologies..
+    implementation "org.threeten:threeten-extra:$threetenExtraVersion", optional
+
     // optional groovy DSL for calendar builder..
     implementation "org.codehaus.groovy:groovy:$groovyVersion", optional
     implementation "org.codehaus.groovy:groovy-dateutil:$groovyVersion", optional
