--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.mnode.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<name>iCal4j</name>
-	<version>1.0.8-SNAPSHOT</version>
+	<version>1.0.8</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
@@ -194,6 +194,14 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+			</plugin>
 		</plugins>
 		
 		<pluginManagement>
@@ -305,7 +313,7 @@
                         ${project.build.outputDirectory}/overview.html
                     </overview>
                     <links>
-                        <link>http://download.oracle.com/javase/1.4.2/docs/api/</link>
+                        <link>https://docs.oracle.com/javase/6/docs/api/</link>
                     </links>
                 </configuration>
             </plugin>
