--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation "org.threeten:threeten-extra:$threetenExtraVersion", optional
 
     // optional groovy DSL for calendar builder..
+    implementation "org.jparsec:jparsec:$jparsecVersion", optional
+
+    // optional groovy DSL for calendar builder..
     implementation "org.codehaus.groovy:groovy:$groovyVersion", optional
     implementation "org.codehaus.groovy:groovy-dateutil:$groovyVersion", optional
 
