--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ commonsLangVersion = 3.8.1
 commonsCollectionsVersion = 4.1
 threetenExtraVersion = 1.5.0
 joolVersion = 0.9.14
+jparsecVersion = 3.1
 
 groovyVersion = 3.0.7
 bndVersion = 5.1.1
