--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -314,3 +314,41 @@ acceptedBreaks:
       new: "method java.util.List<T> net.fortuna.ical4j.model.IndexedComponentList<T\
         \ extends net.fortuna.ical4j.model.Component>::getComponents(java.lang.String)"
       justification: "Use more generic list type should be safe for most users"
+  "3.1.1":
+    org.mnode.ical4j:ical4j:
+    - code: "java.class.defaultSerializationChanged"
+      old: "class net.fortuna.ical4j.validate.ValidationRule"
+      new: "class net.fortuna.ical4j.validate.ValidationRule"
+      justification: "Refatoring validation framework"
+    - code: "java.class.noLongerInheritsFromClass"
+      old: "class net.fortuna.ical4j.validate.component.VTimeZoneValidator"
+      new: "class net.fortuna.ical4j.validate.component.VTimeZoneValidator"
+      justification: "Refatoring validation framework"
+    - code: "java.class.nowFinal"
+      old: "class net.fortuna.ical4j.validate.ValidationRule"
+      new: "class net.fortuna.ical4j.validate.ValidationRule"
+      justification: "Refatoring validation framework"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.PropertyValidator"
+      new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
+      justification: "Refatoring validation framework"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.validate.component.VTimeZoneValidator"
+      new: "class net.fortuna.ical4j.validate.component.VTimeZoneValidator"
+      justification: "Refatoring validation framework"
+    - code: "java.class.superTypeTypeParametersChanged"
+      old: "class net.fortuna.ical4j.validate.PropertyValidator"
+      new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
+      justification: "Refatoring validation framework"
+    - code: "java.generics.elementNowParameterized"
+      old: "class net.fortuna.ical4j.validate.PropertyValidator"
+      new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
+      justification: "Refatoring validation framework"
+    - code: "java.generics.formalTypeParameterAdded"
+      old: "class net.fortuna.ical4j.validate.PropertyValidator"
+      new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
+      justification: "Refatoring validation framework"
+    - code: "java.method.numberOfParametersChanged"
+      old: "method void net.fortuna.ical4j.validate.component.VTimeZoneValidator::<init>(net.fortuna.ical4j.validate.ValidationRule[])"
+      new: "method void net.fortuna.ical4j.validate.component.VTimeZoneValidator::<init>()"
+      justification: "Refatoring validation framework"
