--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-slf4jVersion = 1.7.30
+slf4jVersion = 1.7.32
+log4jVersion = 2.15.0
 commonsCodecVersion = 1.11
 commonsLangVersion = 3.8.1
 commonsCollectionsVersion = 4.1
