--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-test-relaxed-parsing.ics text eol=lf
 *.ics text eol=crlf
+
+test-relaxed-parsing.ics text eol=lf
+japan_west.ics text eol=lf
+talios.ics text eol=lf
