Accept api changes due to validation refactoring

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -340,6 +340,18 @@ acceptedBreaks:
       old: "class net.fortuna.ical4j.validate.PropertyValidator"
       new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
       justification: "Refatoring validation framework"
+    - code: "java.field.removedWithConstant"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator.ASSERT_NONE_MESSAGE"
+      justification: "Refactoring"
+    - code: "java.field.removedWithConstant"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator.ASSERT_ONE_MESSAGE"
+      justification: "Refactoring"
+    - code: "java.field.removedWithConstant"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator.ASSERT_ONE_OR_LESS_MESSAGE"
+      justification: "Refactoring"
+    - code: "java.field.removedWithConstant"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator.ASSERT_ONE_OR_MORE_MESSAGE"
+      justification: "Refactoring"
     - code: "java.generics.elementNowParameterized"
       old: "class net.fortuna.ical4j.validate.PropertyValidator"
       new: "class net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>"
@@ -352,3 +364,19 @@ acceptedBreaks:
       old: "method void net.fortuna.ical4j.validate.component.VTimeZoneValidator::<init>(net.fortuna.ical4j.validate.ValidationRule[])"
       new: "method void net.fortuna.ical4j.validate.component.VTimeZoneValidator::<init>()"
       justification: "Refatoring validation framework"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.validate.PropertyValidator::assertNone(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList) throws net.fortuna.ical4j.validate.ValidationException"
+      justification: "Refactoring"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.validate.PropertyValidator::assertOne(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList) throws net.fortuna.ical4j.validate.ValidationException"
+      justification: "Refactoring"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.validate.PropertyValidator::assertOneOrLess(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList) throws net.fortuna.ical4j.validate.ValidationException"
+      justification: "Refactoring"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.validate.PropertyValidator::assertOneOrMore(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList) throws net.fortuna.ical4j.validate.ValidationException"
+      justification: "Refactoring"
