Added support for negative DST offsets by treating as a non-Daylight time observance

--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -46,6 +46,7 @@ net.fortuna.ical4j.timezone.update.enabled=false
 
 #net.fortuna.ical4j.timezone.date.floating={true|false}
 #net.fortuna.ical4j.timezone.default.utc={true|false}
+#net.fortuna.ical4j.timezone.offset.negative_dst_supported={true|false}
 
 #net.fortuna.ical4j.factory.decoder=net.fortuna.ical4j.util.DefaultDecoderFactory
 
