--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ commonsCollectionsVersion = 4.1
 threetenExtraVersion = 1.5.0
 joolVersion = 0.9.14
 jparsecVersion = 3.1
+everitJsonSchemaVersion = 1.14.0
 
 groovyVersion = 3.0.7
 bndVersion = 6.1.0
