--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -34,13 +34,14 @@
 
 #net.fortuna.ical4j.timezone.registry=net.fortuna.ical4j.model.DefaultTimeZoneRegistryFactory
 
-net.fortuna.ical4j.timezone.update.enabled=false
+net.fortuna.ical4j.timezone.update.enabled=true
 #net.fortuna.ical4j.timezone.update.timeout.connect ## - Connect timeout ( milliseconds, e.g. 10000 - 10s, unlimited by default )
 #net.fortuna.ical4j.timezone.update.timeout.read ## - Read timeout ( milliseconds, e.g. 10000 - 10s, unlimited by default )
 #net.fortuna.ical4j.timezone.update.proxy.enabled={true|false} ## - Use proxy ( true / false )
 #net.fortuna.ical4j.timezone.update.proxy.type ## - Proxy type ( DIRECT / HTTP / SOCKS )
 #net.fortuna.ical4j.timezone.update.proxy.host ## - Proxy server host name ( e.g. proxy.myorg.com )
 #net.fortuna.ical4j.timezone.update.proxy.port=8080 ## - Proxy server port number ( e.g. 3128 )
+net.fortuna.ical4j.timezone.update.connection.secure=true
 
 #net.fortuna.ical4j.timezone.cache.impl=net.fortuna.ical4j.util.MapTimeZoneCache
 
