--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
-slf4jVersion = 1.7.32
-log4jVersion = 2.15.0
-commonsCodecVersion = 1.11
-commonsLangVersion = 3.8.1
-commonsCollectionsVersion = 4.1
-threetenExtraVersion = 1.5.0
+slf4jVersion = 1.7.36
+log4jVersion = 2.17.2
+commonsCodecVersion = 1.15
+commonsLangVersion = 3.12.0
+commonsCollectionsVersion = 4.4
+threetenExtraVersion = 1.7.0
 joolVersion = 0.9.14
 jparsecVersion = 3.1
-everitJsonSchemaVersion = 1.14.0
+everitJsonSchemaVersion = 1.14.1
 
-groovyVersion = 3.0.7
-bndVersion = 6.1.0
+groovyVersion = 3.0.10
+bndVersion = 6.2.0
 tagsoupVersion = 1.2.1
-jcacheVersion = 1.2.4.Final
+jcacheVersion = 2.6.1.Final
 junitVersion = 4.13
+junitVintageVersion = 5.8.2
 
 jacoco_htmlReport = false
 org.gradle.caching = true
