--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ dependencies {
             "org.codehaus.groovy:groovy-xml:$groovyVersion"
 
     // junit
-    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.1'
+    testImplementation "org.junit.vintage:junit-vintage-engine:$junitVintageVersion"
 
     // groovy-test
     testImplementation "org.codehaus.groovy:groovy-test:$groovyVersion"
