--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     testImplementation "org.codehaus.groovy:groovy-test:$groovyVersion"
 
     // spock
-    testImplementation platform("org.spockframework:spock-bom:2.0-M4-groovy-3.0"),
+    testImplementation platform("org.spockframework:spock-bom:2.1-groovy-3.0"),
             "org.spockframework:spock-core"
 }
 
