--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,10 @@ dependencies {
             "org.slf4j:slf4j-log4j12:$slf4jVersion",
             "org.apache.logging.log4j:log4j:$log4jVersion",
             "org.ccil.cowan.tagsoup:tagsoup:$tagsoupVersion",
-            "org.cache2k:cache2k-jcache:$jcacheVersion",
             "org.codehaus.groovy:groovy-xml:$groovyVersion"
+
+    // A CachingProvider is required for TimeZoneCacheTest.groovy
+    testImplementation "org.cache2k:cache2k-jcache:$jcacheVersion"
 
     // junit
     testImplementation "org.junit.vintage:junit-vintage-engine:$junitVintageVersion"
