--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
             "commons-codec:commons-codec:$commonsCodecVersion",
             "org.apache.commons:commons-lang3:$commonsLangVersion",
             "org.apache.commons:commons-collections4:$commonsCollectionsVersion",
-            'com.sun.mail:javax.mail:1.6.2'
+            'com.sun.mail:jakarta.mail:2.0.1'
 
     // optional timezone caching..
     implementation 'javax.cache:cache-api:1.1.1', optional
