Use commons-validator instead of javamail for address validation

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ log4jVersion = 2.17.2
 commonsCodecVersion = 1.15
 commonsLangVersion = 3.12.0
 commonsCollectionsVersion = 4.4
+commonsValidatorVersion = 1.7
 threetenExtraVersion = 1.7.0
 joolVersion = 0.9.14
 jparsecVersion = 3.1
