--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -9460,3 +9460,27 @@ acceptedBreaks:
       new: "method T net.fortuna.ical4j.model.PropertyFactory<T extends net.fortuna.ical4j.model.Property>::createProperty(java.lang.String)\
         \ @ net.fortuna.ical4j.model.property.RecurrenceId.Factory<T extends java.time.temporal.Temporal>"
       justification: "approve_all_api_changes_with_major_refactor"
+  "3.2.3":
+    org.mnode.ical4j:ical4j:
+    - code: "java.method.exception.checkedRemoved"
+      old: "method void net.fortuna.ical4j.model.parameter.Email::<init>(java.lang.String)\
+        \ throws jakarta.mail.internet.AddressException"
+      new: "method void net.fortuna.ical4j.model.parameter.Email::<init>(java.lang.String)"
+      justification: "major_version_update"
+    - code: "java.method.numberOfParametersChanged"
+      old: "method void net.fortuna.ical4j.model.PeriodList::<init>(boolean, boolean)"
+      new: "method void net.fortuna.ical4j.model.PeriodList<T extends java.time.temporal.Temporal>::<init>(org.threeten.extra.Interval[])"
+      justification: "major_version_update"
+    - code: "java.method.parameterTypeChanged"
+      old: "parameter void net.fortuna.ical4j.model.property.FreeBusy::<init>(===net.fortuna.ical4j.model.PeriodList===)"
+      new: "parameter void net.fortuna.ical4j.model.property.FreeBusy::<init>(===java.util.List<org.threeten.extra.Interval>===)"
+      justification: "major_version_update"
+    - code: "java.method.parameterTypeChanged"
+      old: "parameter void net.fortuna.ical4j.model.property.FreeBusy::<init>(net.fortuna.ical4j.model.ParameterList,\
+        \ ===net.fortuna.ical4j.model.PeriodList===)"
+      new: "parameter void net.fortuna.ical4j.model.property.FreeBusy::<init>(net.fortuna.ical4j.model.ParameterList,\
+        \ ===java.util.List<org.threeten.extra.Interval>===)"
+      justification: "major_version_update"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.PeriodList net.fortuna.ical4j.model.property.FreeBusy::getPeriods()"
+      justification: "major_version_update"
