Disable secure tz update for now

--- a/src/test/resources/ical4j.properties
+++ b/src/test/resources/ical4j.properties
@@ -41,7 +41,7 @@ net.fortuna.ical4j.timezone.update.enabled=true
 #net.fortuna.ical4j.timezone.update.proxy.type ## - Proxy type ( DIRECT / HTTP / SOCKS )
 #net.fortuna.ical4j.timezone.update.proxy.host ## - Proxy server host name ( e.g. proxy.myorg.com )
 #net.fortuna.ical4j.timezone.update.proxy.port=8080 ## - Proxy server port number ( e.g. 3128 )
-net.fortuna.ical4j.timezone.update.connection.secure=true
+#net.fortuna.ical4j.timezone.update.connection.secure=true
 
 #net.fortuna.ical4j.timezone.cache.impl=net.fortuna.ical4j.util.MapTimeZoneCache
 
