Prevent timezones on UTC-formatted properties

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -9462,6 +9462,18 @@ acceptedBreaks:
       justification: "approve_all_api_changes_with_major_refactor"
   "3.2.3":
     org.mnode.ical4j:ical4j:
+    - code: "java.class.kindChanged"
+      old: "class net.fortuna.ical4j.model.property.UtcProperty"
+      new: "interface net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.model.property.UtcProperty"
+      new: "interface net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.class.noLongerInheritsFromClass"
+      old: "class net.fortuna.ical4j.model.property.UtcProperty"
+      new: "interface net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
     - code: "java.method.exception.checkedRemoved"
       old: "method void net.fortuna.ical4j.model.DateList::<init>(java.lang.String,\
         \ net.fortuna.ical4j.model.parameter.Value) throws java.text.ParseException"
@@ -9504,8 +9516,67 @@ acceptedBreaks:
         \ ===java.util.List<org.threeten.extra.Interval>===)"
       justification: "major_version_update"
     - code: "java.method.removed"
+      old: "method boolean java.lang.Object::equals(java.lang.Object) @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method int java.lang.Object::hashCode() @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method java.lang.Class<?> java.lang.Object::getClass() @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method java.lang.Object java.lang.Object::clone() throws java.lang.CloneNotSupportedException\
+        \ @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method java.lang.String java.lang.Object::toString() @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.DateTime net.fortuna.ical4j.model.property.UtcProperty::getDateTime()"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
       old: "method net.fortuna.ical4j.model.PeriodList net.fortuna.ical4j.model.property.FreeBusy::getPeriods()"
       justification: "major_version_update"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.validate.ValidationResult net.fortuna.ical4j.model.property.UtcProperty::validate()\
+        \ throws net.fortuna.ical4j.validate.ValidationException"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::finalize() throws java.lang.Throwable @\
+        \ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::notify() @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::notifyAll() @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::wait() throws java.lang.InterruptedException\
+        \ @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::wait(long) throws java.lang.InterruptedException\
+        \ @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void java.lang.Object::wait(long, int) throws java.lang.InterruptedException\
+        \ @ net.fortuna.ical4j.model.property.UtcProperty"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.property.UtcProperty::<init>(java.lang.String,\
+        \ net.fortuna.ical4j.model.ParameterList, net.fortuna.ical4j.model.PropertyFactory)"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.property.UtcProperty::<init>(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyFactory)"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.property.UtcProperty::setDateTime(net.fortuna.ical4j.model.DateTime)"
+      justification: "refactoring_property_traits"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.property.UtcProperty::setTimeZone(net.fortuna.ical4j.model.TimeZone)"
+      justification: "refactoring_property_traits"
     - code: "java.method.visibilityReduced"
       old: "method void net.fortuna.ical4j.model.DateList::<init>(net.fortuna.ical4j.model.parameter.Value)"
       new: "method void net.fortuna.ical4j.model.DateList<T extends java.time.temporal.Temporal>::<init>(java.util.List<net.fortuna.ical4j.model.TemporalAdapter<T>>)"
