--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import aQute.bnd.gradle.Bundle
-
 buildscript {
     repositories {
         mavenCentral()
@@ -107,11 +105,6 @@ javadoc {
     }
 }
 
-task bundle(type: Bundle) {
-    from sourceSets.main.output
-    bndfile = 'bnd.bnd'
-}
-
 task javadocJar(type: Jar, dependsOn: javadoc) {
     archiveClassifier.set('javadoc')
     from 'build/docs/javadoc'
@@ -122,20 +115,9 @@ task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
 }
 
-jar.enabled = false
-build.dependsOn bundle
-
 artifacts {
-    archives bundle
     archives javadocJar
     archives sourcesJar
-}
-
-configurations {
-    [apiElements, runtimeElements].each {
-        it.outgoing.artifacts.removeIf { it.buildDependencies.getDependencies(null).contains(jar) }
-        it.outgoing.artifact(bundle)
-    }
 }
 
 scmVersion {
@@ -159,6 +141,16 @@ description = '''
 A Java library for reading and writing iCalendar (*.ics) files
 '''
 version = scmVersion.version
+
+jar {
+    manifest {
+        attributes (
+                'Implementation-Title': 'iCal4j',
+                'Implementation-Version': version,
+                'Implementation-Vendor': 'Ben Fortuna'
+        )
+    }
+}
 
 revapi {
     oldVersion = revApiOldVersion
