--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ sonatype_password=
 org.gradle.caching = true
 org.gradle.vfs.watch = true
 
-revApiOldVersion = 3.2.4
+revApiOldVersion = 4.0.0-beta2
