--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     // optional timezone caching..
     implementation 'javax.cache:cache-api:1.1.1', optional
+    implementation 'org.jetbrains:annotations:23.0.0', optional
 
     // optional parser for filter expressions..
     implementation "org.jparsec:jparsec:$jparsecVersion", optional
